feature: warnings & home country
