# server/server.go
@@ -108,6 +108,7 @@ func newRouter(options Options) (*gin.Engine, error) {
 		api.PATCH("/feeds/:feedID", handlers.apiUpdateFeed)
 		api.DELETE("/feeds/:feedID", handlers.apiDeleteFeed)
 		api.POST("/feeds/:feedID/retry", handlers.apiRetryFailed)
+		api.POST("/retry", handlers.apiRetryAllFailed)
 		api.POST("/feeds/:feedID/prepare", handlers.apiPrepare)
 	}
 
